# busrep

./: README.md
busrep/: README.md  pubspec.yaml
busrep/android/app/: build.gradle
busrep/android/app/src/debug/: AndroidManifest.xml
busrep/android/app/src/main/: AndroidManifest.xml
busrep/android/app/src/main/kotlin/com/example/busrep/: MainActivity.kt
busrep/ios/Runner/: Info.plist
busrep/ios/Runner.xcodeproj/: project.pbxproj
busrep/lib/: main.dart
busrep/lib/common/: footer.dart
busrep/lib/components/: myApp.dart  notice.dart  post.dart  registerServerAdress.dart  registerUser.dart  view.dart
busrep/lib/helpers/: api.dart  blockchain.dart  crypto.dart  interaction.dart  json.dart  metaData.dart  userID.dart  utils.dart
busrep/lib/models/: blockchain.dart  crypto.dart  data.dart  metaData.dart  response.dart
busrep/lib/repositories/: database.dart  sharedPreferences.dart
busrep/test/: widget_test.dart
busrep_server/: .env  Cargo.toml
busrep_server/migrations/2021-06-12-081137_user/: down.sql  up.sql
busrep_server/migrations/2021-06-12-081141_post/: down.sql  up.sql
busrep_server/migrations/2021-06-12-081147_blockchain/: down.sql  up.sql
busrep_server/src/: api.rs  blockchain.rs  main.rs  models.rs  operation.rs  schema.rs  utils.rs
