[package]
name = "busrep_server"
version = "0.1.0"
authors = ["t6e <m4chinehe4rt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["mysql","chrono"] }
dotenv = "0.15.0"
regex = "1.4.5"
chrono = "*"
rust-crypto = "0.2.36"